픽스 : book.js, author.js
도서 등록 시 description을 ckeditor에서 가져올 수 있도록 수정, author validatorForm에서 if문 추가하여 유효성 검사가 false일 시 서버에 접근할 수 없도록 변경

--- a/src/main/resources/templates/manage/book/book-register.html
+++ b/src/main/resources/templates/manage/book/book-register.html
@@ -70,7 +70,10 @@
           <label for="description">도서 설명</label>
           <textarea name="description" id="description" class="form-control mb-3 p-2"></textarea>
           <script>
-            ClassicEditor.create(document.querySelector('#description'));
+            ClassicEditor.create(document.querySelector('#description'))
+                    .then(editor => {
+                      window.ckeditorInstance = editor;
+                    })
           </script>
           <label for="file">도서 썸네일 이미지</label>
           <input type="file" name="file" id="file" class="form-control mb-3 p-2"
