--- a/src/main/resources/templates/common/fragments/footer.html
+++ b/src/main/resources/templates/common/fragments/footer.html
@@ -14,13 +14,13 @@
       </li>
       <li class="mt-3">
         <strong>온라인 이력서</strong><br>
-        <a href="https://www.notion.so/476bcf66d343480e89b5f0bde6b33e9d">https://www.notion.so/476bcf66d343480e89b5f0bde6b33e9d</a>
+        <a href="https://obtainable-elm-65d.notion.site/476bcf66d343480e89b5f0bde6b33e9d?pvs=4">https://obtainable-elm-65d.notion.site/476bcf66d343480e89b5f0bde6b33e9d?pvs=4</a>
       </li>
     </ul>
     <ul class="text-white">
       <li>
         <strong>프로젝트 설계</strong><br>
-        <a href="https://www.notion.so/e8f0c444c1ca471b9d8fc3d81dfa50df">https://www.notion.so/e8f0c444c1ca471b9d8fc3d81dfa50df</a>
+        <a href="https://obtainable-elm-65d.notion.site/e8f0c444c1ca471b9d8fc3d81dfa50df?pvs=4">https://obtainable-elm-65d.notion.site/e8f0c444c1ca471b9d8fc3d81dfa50df?pvs=4</a>
       </li>
       <li class="mt-3">
         <strong>프로젝트 깃허브 리포지토리</strong><br>
