픽스 : 푸터 fragment 경로 수정

--- a/src/main/resources/templates/user/modify/modify.html
+++ b/src/main/resources/templates/user/modify/modify.html
@@ -39,6 +39,6 @@
   </main>
 
 </div>
-<th:block th:replace="~{/common/fragments/footer :: footer}"></th:block>
+<th:block th:replace="~{common/fragments/footer :: footer}"></th:block>
 </body>
 </html>
