--- a/src/main/resources/templates/user/orders/history.html
+++ b/src/main/resources/templates/user/orders/history.html
@@ -91,6 +91,6 @@
   </section>
 
 </div>
-<th:block th:replace="~{/common/fragments/footer :: footer}"></th:block>
+<th:block th:replace="~{common/fragments/footer :: footer}"></th:block>
 </body>
 </html>
