--- a/src/main/resources/templates/user/orders/detail.html
+++ b/src/main/resources/templates/user/orders/detail.html
@@ -82,6 +82,6 @@
     </div>
   </main>
 </div>
-<th:block th:replace="~{/common/fragments/footer :: footer}"></th:block>
+<th:block th:replace="~{common/fragments/footer :: footer}"></th:block>
 </body>
 </html>
