수정 : html 위시리스트 h-100 클래스 제거

--- a/src/main/resources/templates/wishlist/wishlist.html
+++ b/src/main/resources/templates/wishlist/wishlist.html
@@ -23,7 +23,7 @@
     </script>
 </head>
 <body>
-<div class="container h-100">
+<div class="container">
     <header class="header mt-1 mb-5">
         <th:block th:replace="~{common/fragments/navbar :: navbar}"></th:block>
     </header>
