--- a/src/main/resources/templates/book/book.html
+++ b/src/main/resources/templates/book/book.html
@@ -148,7 +148,7 @@
       <div class="mt-1">
         <div class="row">
           <div class="col-4 text-center">
-            <div class="border h-100 d-flex justify-content-center align-items-center">
+            <div class="border min-vh-100 d-flex justify-content-center align-items-center">
               <div>
                 <span class="fw-bold">
                   평점
