--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -77,7 +77,7 @@
                 <div class="content">
                     <h1 class="fs-3 fw-bold">베스트 도서</h1>
                     <ul class="d-flex justify-content-between flex-row w-100">
-                        <li class="me-2 ext-center" th:each="book : ${bestBooks}">
+                        <li class="me-2" th:each="book : ${bestBooks}">
                             <a th:href="@{/book/{isbn}(isbn=${book.isbn})}">
                                 <img th:src="@{/images/book/{savedBookName}(savedBookName=${book.savedImageName})}" th:alt="${book.title + '의 표지'}" width="120" height="180">
                                 <div th:text="${book.title}"></div>
